Riorganizzate librerie di test, suddivise in pacchetti di utilizzo