@@ -17,13 +17,11 @@
 		<fileset dir="../example/server/RPCLiteralExample/deploy/stub/">
 			<include name="*.jar"/>
 		</fileset>
-		<fileset dir="${required_lib}/testsuite">
-			<include name="hamcrest-core-1.3.jar"/>
-			<include name="junit-4.13.2.jar"/>
-			<include name="karate-*.jar"/>
-			<include name="picocli-4.2.0.jar"/>
-			<include name="logback-*.jar"/>
-			<include name="spring-jdbc-*.jar"/>
+		<fileset dir="${required_lib}/testsuite/junit4" >
+			<include name="*.jar"/>
+		</fileset>
+		<fileset dir="${required_lib}/testsuite/logback" >
+			<include name="*.jar"/>
 		</fileset>
 		<fileset dir="${dir_jdbc}">
 			<include name="*.jar"/>
@@ -36,6 +34,7 @@
 		</fileset>
 		<fileset dir="${required_lib}/log">
 			<include name="*.jar"/>
+			<exclude name="log4j-slf4j2-impl-2.23.1.jar"/> <!-- per evitare errore SLF4J(W): Class path contains multiple SLF4J providers. (uso logback) -->
 		</fileset>
 		<fileset dir="${required_lib}/json">
 			<include name="*.jar"/>
@@ -141,18 +140,21 @@
 	<target name="plugin" depends="clean_plugin,init_plugin" description="produce l'archivio jar per i plugin">
 		<!-- Compile the java code  -->
 		<javac includeantruntime="false" destdir="${build_plugin}" debug="${debug}">
+                        <compilerarg value="-proc:full"/>
 			<src path="${src_testsuite}/org/openspcoop2/core/protocolli/trasparente/testsuite/plugin/classes"/>
 			<classpath>
 				<path refid="karate_testsuite"/>
 			</classpath>
 		</javac>
 		<javac includeantruntime="false" destdir="${build_plugin}" debug="${debug}">
+                        <compilerarg value="-proc:full"/>
 			<src path="${src_testsuite}/org/openspcoop2/core/protocolli/trasparente/testsuite/connettori/consegna_con_notifiche/classes"/>
 			<classpath>
 				<path refid="karate_testsuite"/>
 			</classpath>
 		</javac>
 		<javac includeantruntime="false" destdir="${build_plugin}" debug="${debug}">
+                        <compilerarg value="-proc:full"/>
 			<src path="${src_testsuite}/org/openspcoop2/core/protocolli/trasparente/testsuite/tracciamento/classes"/>
 			<classpath>
 				<path refid="karate_testsuite"/>
@@ -168,6 +170,7 @@
 		<!-- Compile the java code  -->
 		<javac includeantruntime="false" destdir="${build_testsuite}" debug="${debug}">
 			<src path="${src_testsuite}"/>
+                        <compilerarg value="-proc:full"/>
 			<exclude name="org/openspcoop2/core/protocolli/trasparente/testsuite/plugin/classes/*" />
 			<exclude name="org/openspcoop2/core/protocolli/trasparente/testsuite/tracciamento/classes/*" />
 			<classpath>
